[package]
name = "gridgames-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
env_logger = "0.10"

[lints.clippy]
needless_range_loop = "allow"
new_without_default = "allow"